Report almost done

--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -1,16 +1,25 @@
-@inproceedings{Rouse2010,
-abstract = {The merit of an objective quality estimator for either still images or video is gauged by its ability to accurately estimate the perceived quality scores of a collection of stimuli. Encounters with radically different distortion types that arise in novel media representations require that researchers collect perceived quality scores representative of these new distortions to confidently evaluate a candidate objective quality estimator. Two common methods used to collect perceived quality scores are absolute categorical rating (ACR)1 and subjective assessment for video quality (SAMVIQ).2, 3 The choice of a particular test method affects the accuracy and reliability of the data collected. An awareness of the potential benefits and/or costs attributed to the ACR and SAMVIQ test methods can guide researchers to choose the more suitable method for a particular application. This paper investigates the tradeoffs of these two subjective testing methods using three different subjective databases that have scores corresponding to each method. The subjective databases contain either still-images or video sequences. This paper has the following organization: Section 2 summarizes the two test methods compared in this paper, ACR and SAMVIQ. Section 3 summarizes the content of the three subjective databases used to evaluate the two test methods. An analysis of the ACR and SAMVIQ test methods is presented in Section 4. Section 5 concludes this paper.},
-author = {Rouse, David M and P{\'{e}}pion, Romuald and {Le Callet}, Patrick and Hemami, Sheila S},
-booktitle = {Proc. SPIE},
-doi = {10.1117/12.845389},
-editor = {Rogowitz, Bernice E. and Pappas, Thrasyvoulos N.},
-file = {::},
-month = {feb},
-pages = {75270F--75270F--11},
-title = {{Tradeoffs in subjective testing methods for image and video quality assessment}},
-url = {http://dx.doi.org/10.1117/12.845389$\backslash$nhttp://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=776201 http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=776201},
-volume = {7527},
-year = {2010}
+@article{Street,
+author = {Huynh-Thu, Quan and Brotherton, Matthew and Hands, David and Brunnstr{\"{o}}m, Kjell and Ghanbari, Mohammed},
+file = {:C$\backslash$:/Users/linea/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Street et al. - Unknown - EXAMINATION OF THE SAMVIQ METHODOLOGY FOR THE SUBJECTIVE British Telecommunications plc , Martlesham Heath , I.pdf:pdf},
+journal = {Proc. International Workshop on Video Processing and Quality Metrics for Consumer Electronics (VPQM’07), Scottsdale, USA},
+pages = {17},
+title = {{Examination of the samviq methodology for the subjective assessment of multimedia quality}},
+year = {2007}
+}
+@article{InternationalTelecommunicationUnion2007,
+abstract = {Methodology for the subjective assessment of video quality in multimedia applications},
+author = {{International Telecommunication Union}},
+file = {:C$\backslash$:/Users/linea/Dropbox/Speciale/Articles/Methodology for the subjective assessment of video quality.pdf:pdf},
+journal = {Recommendation ITU-R BT.1788},
+pages = {1--13},
+title = {{Methodology for the subjective assessment of video quality in multimedi applications}},
+year = {2007}
+}
+@techreport{ITU-TRecommendationP.9102008,
+author = {{ITU-T Recommendation P.910}},
+file = {:C$\backslash$:/Users/linea/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/ITU-T Recommendation P.910 - 1999 - Subjective video quality assessment methods for multimedia applications.pdf:pdf},
+title = {{Subjective video quality assessment methods for multimedia applications}},
+year = {1999}
 }
 @article{Kozamernik2005,
 abstract = {In order to evaluate the performance of video codecs for the internet, EBU Project Group B/VIM has developed a new subjective evaluation methodology called SAMVIQ (Subjective Assessment Methodology for Video Quality). This new methodology was used recently during B/VIM’s Phase 2 subjective evaluations of four codecs designed for internet use: Envivio MPEG-4, QuickTime 6, RealNetworks 9 and Windows Media 9. This article gives a short description of SAMVIQ and summarizes the main findings of the Phase 2 subjective evaluations.},
@@ -23,9 +32,17 @@ title = {{Subjective quality of internet video codecs - Phase 2 evaluations usin
 url = {http://scholar.google.com/scholar?hl=en{\&}btnG=Search{\&}q=intitle:Subjective+quality+of+internet+video+codecs{\#}5},
 year = {2005}
 }
-@techreport{ITU-TRecommendationP.9102008,
-author = {{ITU-T Recommendation P.910}},
-file = {::},
-title = {{Subjective video quality assessment methods for multimedia applications}},
-year = {1999}
+@inproceedings{Rouse2010,
+abstract = {The merit of an objective quality estimator for either still images or video is gauged by its ability to accurately estimate the perceived quality scores of a collection of stimuli. Encounters with radically different distortion types that arise in novel media representations require that researchers collect perceived quality scores representative of these new distortions to confidently evaluate a candidate objective quality estimator. Two common methods used to collect perceived quality scores are absolute categorical rating (ACR)1 and subjective assessment for video quality (SAMVIQ).2, 3 The choice of a particular test method affects the accuracy and reliability of the data collected. An awareness of the potential benefits and/or costs attributed to the ACR and SAMVIQ test methods can guide researchers to choose the more suitable method for a particular application. This paper investigates the tradeoffs of these two subjective testing methods using three different subjective databases that have scores corresponding to each method. The subjective databases contain either still-images or video sequences. This paper has the following organization: Section 2 summarizes the two test methods compared in this paper, ACR and SAMVIQ. Section 3 summarizes the content of the three subjective databases used to evaluate the two test methods. An analysis of the ACR and SAMVIQ test methods is presented in Section 4. Section 5 concludes this paper.},
+author = {Rouse, David M and P{\'{e}}pion, Romuald and {Le Callet}, Patrick and Hemami, Sheila S},
+booktitle = {Proc. SPIE},
+doi = {10.1117/12.845389},
+editor = {Rogowitz, Bernice E. and Pappas, Thrasyvoulos N.},
+file = {:C$\backslash$:/Users/linea/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Rouse et al. - 2010 - Tradeoffs in subjective testing methods for image and video quality assessment.pdf:pdf},
+month = {feb},
+pages = {75270F--75270F--11},
+title = {{Tradeoffs in subjective testing methods for image and video quality assessment}},
+url = {http://dx.doi.org/10.1117/12.845389$\backslash$nhttp://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=776201 http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=776201},
+volume = {7527},
+year = {2010}
 }
