--- a/Report/Main.tex
+++ b/Report/Main.tex
@@ -38,6 +38,13 @@
 %-----------------------------------------------
 
 \bibliographystyle{plain}
-\bibliography{Bibliography}
+\bibliography{Bibliography,Websites}
+
+%-----------------------------------------------
+%	APPENDICES
+%-----------------------------------------------
+
+\appendix
+\include{Chapters/Appendices/Appendix1}
 
 \end{document}
