--- a/Report/Main.tex
+++ b/Report/Main.tex
@@ -34,17 +34,19 @@
 \include{Chapters/ConcludingRemarks/ConcludingRemarks}
 
 %-----------------------------------------------
+%	APPENDICES
+%-----------------------------------------------
+
+\appendix
+\setcounter{secnumdepth}{0}
+\include{Chapters/Appendices/InstallationGuide}
+\include{Chapters/Appendices/SAMVIQUserManual}
+
+%-----------------------------------------------
 %	POST-CONTENT
 %-----------------------------------------------
 
 \bibliographystyle{plain}
 \bibliography{Bibliography,Websites}
-
-%-----------------------------------------------
-%	APPENDICES
-%-----------------------------------------------
-
-\appendix
-\include{Chapters/Appendices/Appendix1}
 
 \end{document}
